# GTK4-Calculator

./: .gitignore  README.md  default.nix  meson.build  shell.nix
.cache/clangd/index/: main.cc.02DDE0D5ACECF71F.idx  main.cpp.1C128A47D8F00857.idx
src/: main.cc  main.cpp  mainwindow.cpp  mainwindow.h
